--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,14 @@
-# Google Gemini API
+# API Keys
 GEMINI_API_KEY=your_gemini_api_key_here
-
-# Gumloop Integration
 GUMLOOP_API_KEY=your_gumloop_api_key_here
 GUMLOOP_WORKFLOW_ID=your_workflow_id_here
 
-# Render Worker
+# Gumloop Integration Service URLs
+CLIP_SELECTION_API_URL=http://localhost:8001/api/select-clips
+LLM_REPAIR_SERVICE_URL=http://localhost:8001/api/repair-edl
+TRACKING_SERVICE_URL=http://localhost:8001/api/track
+WHISPERX_SERVICE_URL=http://localhost:8001/api/transcribe
 RENDER_WORKER_URL=http://localhost:8000
 
 # Storage (for production)
-STORAGE_BUCKET=your_storage_bucket
-STORAGE_REGION=us-west-2
-
-# Database (for production)
-REDIS_URL=redis://localhost:6379
+STORAGE_BUCKET=your_s3_or_gcs_bucket
