--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,10 @@ uvicorn[standard]==0.27.0
 pydantic==2.5.3
 google-generativeai==0.3.2
 git+https://github.com/m-bain/whisperX.git
-mediapipe==0.10.31
-opencv-python==4.9.0.80
+mediapipe>=0.10.14
+opencv-python>=4.9.0
 requests==2.31.0
 yt-dlp
 jsonschema==4.20.0
 python-dotenv==1.0.1
-numpy<2.0.0
+numpy>=2.0.2,<2.1.0
