--- a/railway.toml
+++ b/railway.toml
@@ -1,6 +1,3 @@
 [build]
-builder = "DOCKERFILE"
-dockerfilePath = "Dockerfile"
-
-[deploy]
-startCommand = "uvicorn api.main:app --host 0.0.0.0 --port $PORT"
+strategy = "docker"
+dockerfile = "Dockerfile"
